--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-fastapi
-uvicorn[standard]
-SQLAlchemy
-
 requests
 discord
 aeval
+asyncpg
+sqlalchemy[asyncio]
+alembic
+uvicorn[standard]
+fastapi
+websockets
+httpx
+python-multipart
+python-jose[cryptography]
+passlib[bcrypt]
+pyotp
+email-validator
+pytest
+aiosmtplib
+Jinja2
+python-dotenv
