--- a/example.env
+++ b/example.env
@@ -11,9 +11,9 @@ CONTROL_REDIRECTS_ALLOWED_IPS=127.0.0.1,192.168.0.1
 # Bot config
 API_URL=https://${SERVER_DOMEN}/control
 BOT_OWNERS=123456789012345678,876543210987654321
-EVAL_OWNERS=987654321098765432
+EVAL_OWNERS=1234567
 COGS_ON_START=redirect_manager
-CLIENT_ID=987654321012345678
-PERMISSIONS=123456789
+CLIENT_ID=123456789
+PERMISSIONS=537184257
 INVITE_LINK=https://discord.com/api/oauth2/authorize?client_id=${CLIENT_ID}&permissions=${PERMISSIONS}&scope=bot%20applications.commands
 DISCORD_TOKEN=my_discord_token_here
