app files structure changed (need rewrite env)

--- a/example.env
+++ b/example.env
@@ -3,13 +3,13 @@
 DEBUG=False
 
 # Server config
-SERVER_IP=192.168.0.1
-SERVER_PORT=8080
-SERVER_DOMEN=myserver.com
+SERVER_IP=127.0.0.1
+SERVER_PORT=8000
+SERVER_DOMEN=http://localhost
 CONTROL_REDIRECTS_ALLOWED_IPS=127.0.0.1,192.168.0.1
 
 # Bot config
-API_URL=https://${SERVER_DOMEN}/control
+API_URL=${SERVER_DOMEN}/control
 BOT_OWNERS=123456789012345678,876543210987654321
 EVAL_OWNERS=1234567
 COGS_ON_START=redirect_manager
